...
  Widget build(BuildContext context) {
    final size = MediaQuery.of(context).size;

    return Form(
      key: _formKey,
      child: SingleChildScrollView(
        key: ValueKey('scroller'),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            InputTitle(title: 'Title:'),
            const SizedBox(height: 12.0),
            TextFormField(
              key: ValueKey('trans_title'),
              controller: _titleController,
              decoration: InputDecoration(
                border: OutlineInputBorder(
                  borderSide: BorderSide(color: FiscalTheme.TEXT_INPUT_BORDER_COLOR),
                ),
                fillColor: FiscalTheme.TEXT_INPUT_BACKGROUND_COLOR,
...
              ),
            ),
            const SizedBox(height: 16.0),
            InputTitle(title: 'Amount:'),
            const SizedBox(height: 12.0),
            TextFormField(
              key: ValueKey('trans_amount'),
              controller: _amountController,
              decoration: InputDecoration(
                border: OutlineInputBorder(
                  borderSide: BorderSide(color: FiscalTheme.TEXT_INPUT_BORDER_COLOR),
                ),
                fillColor: FiscalTheme.TEXT_INPUT_BACKGROUND_COLOR,
...
            const SizedBox(height: 16.0),
            InputTitle(title: 'Category:'),
            const SizedBox(height: 12.0),
            SizedBox(
              width: size.width * 0.9,
              child: DropdownButtonFormField<int>(
                key: ValueKey('categories_dropdown'),
                onChanged: (cat) => setState(() => _categoryDropdownValue = cat ?? -1),
                value: _categoryDropdownValue,
                onSaved: (cat) => _categoryDropdownValue = cat ?? -1,
                decoration: InputDecoration(
                  border: OutlineInputBorder(
                    borderSide: BorderSide(color: FiscalTheme.TEXT_INPUT_BORDER_COLOR),
...
            const SizedBox(height: 16.0),
            InputTitle(title: 'Account:'),
            const SizedBox(height: 12.0),
            SizedBox(
              width: size.width * 0.9,
              child: DropdownButtonFormField<int>(
                key: ValueKey('account_dropdown'),
                onChanged: (cat) => setState(() => _accountDropdownValue = cat ?? -1),
                value: _accountDropdownValue,
                onSaved: (cat) => _accountDropdownValue = cat ?? -1,
                decoration: InputDecoration(
                  border: OutlineInputBorder(
                    borderSide: BorderSide(color: FiscalTheme.TEXT_INPUT_BORDER_COLOR),
...
                filled: true,
                focusedBorder: OutlineInputBorder(
                  borderSide: BorderSide(color: FiscalTheme.TEXT_INPUT_BORDER_COLOR),
                ),
                contentPadding: const EdgeInsets.symmetric(horizontal: 16.0, vertical: 4.0),
                suffixIcon: IconButton(
                  key: ValueKey('date_picker'),
                  onPressed: _handleDateSelector,
                  icon: Icon(
                    Icons.calendar_today_rounded,
                    color: Color(0xFF57335D),
                  ),
                ),
...
              keyboardType: TextInputType.text,
            ),
            const SizedBox(height: 16.0),
            InputTitle(title: 'Description:'),
            const SizedBox(height: 12.0),
            TextFormField(
              key: ValueKey('description'),
              controller: _descriptionController,
              decoration: InputDecoration(
                border: OutlineInputBorder(
                  borderSide: BorderSide(color: FiscalTheme.TEXT_INPUT_BORDER_COLOR),
                ),
                counterText: '',
...
            const SizedBox(height: 25.0),
            SizedBox(
              width: size.width,
              child: Consumer<TransactionProvider>(
                builder: (context, provider, child) {
                  if (provider.status == TransactionStatus.LOADING || provider.status == TransactionStatus.UPDATING)
                    return Center(child: CircularProgressIndicator(key: ValueKey('progress')));
                  else if (provider.status == TransactionStatus.ERROR)
                    return ErrorWidget(provider.error);
                  else if (provider.status == TransactionStatus.ADDED || provider.status == TransactionStatus.UPDATED)
                    return _onAddComplete(child!);
                  else
                    return child!;
                },
                child: PrimaryButton(key: ValueKey('save'), btnText: 'Save', onPressed: _save),
              ),
            ),
          ],
        ),
      ),
    );
...
