...
            child: SingleChildScrollView(
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  ScreenTitle(
                    key: ValueKey('update_title'),
                    title: 'Update Transaction',
                    actions: [
                      IconButton(
                        key: ValueKey('close_update'),
                        onPressed: locator.get<NavigationService>().navigateBack,
                        icon: Icon(
                          Icons.close_rounded,
                          color: FiscalTheme.SECONDARY_COLOR,
                          size: 35.0,
                        ),
...
